--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script scr="script.js"> </script>
+    
     <title>Etch-a-Sketch</title>
 </head>
 
@@ -18,34 +18,22 @@
         </div>
         <div class="function-container" style="background-color:black;">
             <div class="grid-menu">
-                <form>
-                    <label  for="i_color">Color:</label> <br>
-                    <input title="Click to choose a color" atl="click and hover to choose color"  type="color" id="i_color">
-                    <button atl="Click to select color"  title="Click to select this color" type="submit"> Select color</button>
-                </form>
-                <form>
+                <div class="func_menu">
+                    <label  for="i_color" >Color:</label> <br>
+                    <input title="Click to choose a color" atl="click and hover to choose color"  type="color" id="i_color" value="#ffffff">
+                    <button atl="Click to select color"  title="Click to select this color" onclick="SetColor()"> Select color</button>
+                </div>
+                <div>
                     <label>Grid size:</label>
-                    <button atl="click to choose 16x16 grid" onlick="SizeGrid(16)"> 16x16</button>
-                    <button atl="click to choose 48x48 grid" onlick="SizeGrid(48)"> 48x48</button>
-                    <button atl="click to choose 64x64 grid" onlick="SizeGrid(64)"> 64x64</button>
-                </form>
-                <button atl="click to clear grid"type="submit" id="grid_clear">Clear</button>
+                    <button atl="click to choose 16x16 grid" onclick="SizeGrid(16)"> 16x16</button>
+                    <button atl="click to choose 48x48 grid" onclick="SizeGrid(48)"> 48x48</button>
+                    <button atl="click to choose 64x64 grid" onclick="SizeGrid(64)"> 64x64</button>
+                </div>
+                <button atl="click to clear grid" onclick="ResetGrid()">Clear</button>
             </div>
 
         </div>
-        <script>
-            function SizeGrid(grid_size){
-            console.log('hi');
-            // alert(noo);
-            // for( let i = 0; i < grid_size; i++){
-            // const grid_cont = document.querySelector('.grid-container');
-            // const new_grid = document.createElement('div');
-            // new_grid.classList.add('grid');
-            // grid_cont.appendChild(new_grid);
-            // }
-             }
-
-            </script>
+        <script src="script.js"> </script>
 </body>
 
 </html>
