--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body style="background-color:black">
     <h1 style="color:white;text-align:center"> Sketch whatever</h1>
     <div class="sketch-container">
-        <div class="grid-container">
+        <div class="grid-container" ondragstart="return false;" ondrop="return false;">
 
         </div>
         <div class="function-container" style="background-color:black;">
